# cashu-mcp-wallet

./: .gitignore  Cargo.toml  DELIVERABLES.md  DEPLOYMENT.md  README.md  TEAM_SETUP.md  rust-toolchain.toml  telegram_bot.py
server/: Cargo.toml
server/src/: balances.rs  cashu_wallet_service.rs  errors.rs  lib.rs  main.rs  wad.rs
telegram-bot/: TASK4_DELIVERABLES.md  command_patterns.py  env.example  quick_start.sh  setup.py  telegram_bot.py  ux_design.md
telegram-bot/tests/: README.md  test_connection.py
tests/: aditional_tests.py  generate_test_message.py  test_bot.py
